tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP55ErrorReportingTests#PHP55ErrorReportingTests(String).mjava
	public PHP55ErrorReportingTests(String description) {
		super(description);
	}

